[Editorial] Modernize some spelling (Poem)

--- a/src/epub/text/tale-1.xhtml
+++ b/src/epub/text/tale-1.xhtml
@@ -1063,7 +1063,7 @@
 				</span>
 				<br/>
 				<span>
-					<span>And tho’ they now were mirthful,</span>
+					<span>And though they now were mirthful,</span>
 					<span>they came to know deep gloom and heavy sorrow.</span>
 				</span>
 			</p>
