--- a/src/epub/text/tale-10.xhtml
+++ b/src/epub/text/tale-10.xhtml
@@ -87,7 +87,7 @@
 				</span>
 				<br/>
 				<span>
-					<span>Tho’ she all lands were owning,</span>
+					<span>Though she all lands were owning,</span>
 					<span>the home is not so near,</span>
 				</span>
 				<br/>
@@ -167,7 +167,7 @@
 			<p>
 				<span>
 					<span>Then young Hartmut answered:</span>
-					<span>“Tho’ with a warlike band</span>
+					<span>“Though with a warlike band</span>
 				</span>
 				<br/>
 				<span>
