--- a/src/epub/text/tale-11.xhtml
+++ b/src/epub/text/tale-11.xhtml
@@ -55,7 +55,7 @@
 				</span>
 				<br/>
 				<span>
-					<span>But tho’ the maid was willing,</span>
+					<span>But though the maid was willing,</span>
 					<span>her father, Hettel, he in vain beseeches.</span>
 				</span>
 			</p>
@@ -192,7 +192,7 @@
 				</span>
 				<br/>
 				<span>
-					<span>And tho’ she wished he ever</span>
+					<span>And though she wished he ever</span>
 					<span>a happy life might have,</span>
 				</span>
 				<br/>
