--- a/src/epub/text/tale-12.xhtml
+++ b/src/epub/text/tale-12.xhtml
@@ -45,7 +45,7 @@
 				</span>
 				<br/>
 				<span>
-					<span>A thousand times tho’ daily</span>
+					<span>A thousand times though daily</span>
 					<span>he should send to ask her hand,</span>
 				</span>
 				<br/>
@@ -155,7 +155,7 @@
 				</span>
 				<br/>
 				<span>
-					<span>Tho’ good or ill it bring us,</span>
+					<span>Though good or ill it bring us,</span>
 					<span>praise should they be earning.</span>
 				</span>
 				<br/>
@@ -282,7 +282,7 @@
 				<br/>
 				<span>
 					<span>As they were rushing onward,</span>
-					<span>tho’ high his heart was swelling:</span>
+					<span>though high his heart was swelling:</span>
 				</span>
 				<br/>
 				<span>
