--- a/src/epub/text/tale-13.xhtml
+++ b/src/epub/text/tale-13.xhtml
@@ -135,7 +135,7 @@
 				<br/>
 				<span>
 					<span>Onward came they proudly,</span>
-					<span>as tho’ the world’s end seeking;</span>
+					<span>as though the world’s end seeking;</span>
 				</span>
 				<br/>
 				<span>
@@ -229,7 +229,7 @@
 			</p>
 			<p>
 				<span>
-					<span>Tho’ sad in mood he found them,</span>
+					<span>Though sad in mood he found them,</span>
 					<span>a welcome kind he gave,</span>
 				</span>
 				<br/>
