--- a/src/epub/text/tale-14.xhtml
+++ b/src/epub/text/tale-14.xhtml
@@ -129,7 +129,7 @@
 				</span>
 				<br/>
 				<span>
-					<span>Tho’ little good they looked for,</span>
+					<span>Though little good they looked for,</span>
 					<span>from the Norman border went;</span>
 				</span>
 				<br/>
