--- a/src/epub/text/tale-15.xhtml
+++ b/src/epub/text/tale-15.xhtml
@@ -685,7 +685,7 @@
 				<br/>
 				<span>
 					<span>Three thousand now came boldly,</span>
-					<span>tho’ sad on their homeward way they might yet be looking.</span>
+					<span>though sad on their homeward way they might yet be looking.</span>
 				</span>
 			</p>
 			<p>
