--- a/src/epub/text/tale-17.xhtml
+++ b/src/epub/text/tale-17.xhtml
@@ -55,7 +55,7 @@
 				</span>
 				<br/>
 				<span>
-					<span>But a doom to them most woful</span>
+					<span>But a doom to them most woeful</span>
 					<span>erelong must come, instead of the rest they were seeking.</span>
 				</span>
 			</p>
