--- a/src/epub/text/tale-2.xhtml
+++ b/src/epub/text/tale-2.xhtml
@@ -565,7 +565,7 @@
 			</p>
 			<p>
 				<span>
-					<span>Tho’ his years were not yet many,</span>
+					<span>Though his years were not yet many,</span>
 					<span>he still was brave enough;</span>
 				</span>
 				<br/>
