--- a/src/epub/text/tale-20.xhtml
+++ b/src/epub/text/tale-20.xhtml
@@ -1625,7 +1625,7 @@
 				</span>
 				<br/>
 				<span>
-					<span>The love of knights, tho’ worthy,</span>
+					<span>The love of knights, though worthy,</span>
 					<span>I can long for never.</span>
 				</span>
 				<br/>
