--- a/src/epub/text/tale-22.xhtml
+++ b/src/epub/text/tale-22.xhtml
@@ -528,7 +528,7 @@
 				</span>
 				<br/>
 				<span>
-					<span>Tho’ many for all their toiling</span>
+					<span>Though many for all their toiling</span>
 					<span>would find but scant reward,</span>
 				</span>
 				<br/>
