--- a/src/epub/text/tale-27.xhtml
+++ b/src/epub/text/tale-27.xhtml
@@ -1264,7 +1264,7 @@
 				<br/>
 				<span>
 					<span>Saw their bucklers shattered,</span>
-					<span>tho’ strong and often tried;</span>
+					<span>though strong and often tried;</span>
 				</span>
 				<br/>
 				<span>
