--- a/src/epub/text/tale-28.xhtml
+++ b/src/epub/text/tale-28.xhtml
@@ -339,7 +339,7 @@
 				</span>
 				<br/>
 				<span>
-					<span>He said: “Tho’ from our foemen</span>
+					<span>He said: “Though from our foemen</span>
 					<span>our gains this day are great,</span>
 				</span>
 				<br/>
