--- a/src/epub/text/tale-29.xhtml
+++ b/src/epub/text/tale-29.xhtml
@@ -161,7 +161,7 @@
 				<br/>
 				<span>
 					<span>To load the ships on the waters;</span>
-					<span>tho’ much they took, yet much must be forsaken.</span>
+					<span>though much they took, yet much must be forsaken.</span>
 				</span>
 			</p>
 			<p>
@@ -213,7 +213,7 @@
 				</span>
 				<br/>
 				<span>
-					<span>Tho’ now in the cradle wailing,</span>
+					<span>Though now in the cradle wailing,</span>
 					<span>say, wouldst thou have willed</span>
 				</span>
 				<br/>
@@ -381,7 +381,7 @@
 				</span>
 				<br/>
 				<span>
-					<span>Tho’ Gu-drun was glad to see him,</span>
+					<span>Though Gu-drun was glad to see him,</span>
 					<span>she had liked it better yet</span>
 				</span>
 				<br/>
@@ -943,7 +943,7 @@
 			</p>
 			<p>
 				<span>
-					<span>They to the sea intrusted</span>
+					<span>They to the sea entrusted</span>
 					<span>four thousand of the dead;</span>
 				</span>
 				<br/>
@@ -1016,7 +1016,7 @@
 				</span>
 				<br/>
 				<span>
-					<span>To him was Gu-drun intrusted,</span>
+					<span>To him was Gu-drun entrusted,</span>
 					<span>and all her maidens near her:</span>
 				</span>
 				<br/>
@@ -1206,7 +1206,7 @@
 				<br/>
 				<span>
 					<span>Our foes are well rewarded,</span>
-					<span>tho’ sore has been the fighting,</span>
+					<span>though sore has been the fighting,</span>
 				</span>
 				<br/>
 				<span>
