--- a/src/epub/text/tale-3.xhtml
+++ b/src/epub/text/tale-3.xhtml
@@ -55,7 +55,7 @@
 				</span>
 				<br/>
 				<span>
-					<span>Tho’ they at first mistook them,</span>
+					<span>Though they at first mistook them,</span>
 					<span>and thought them wicked elves, or mermaids dreadful.</span>
 				</span>
 			</p>
