--- a/src/epub/text/tale-32.xhtml
+++ b/src/epub/text/tale-32.xhtml
@@ -45,7 +45,7 @@
 				</span>
 				<br/>
 				<span>
-					<span>Tho’ rich were Herwic’s followers</span>
+					<span>Though rich were Herwic’s followers</span>
 					<span>when first to her they came,</span>
 				</span>
 				<br/>
