--- a/src/epub/text/tale-5.xhtml
+++ b/src/epub/text/tale-5.xhtml
@@ -1860,7 +1860,7 @@
 				</span>
 				<br/>
 				<span>
-					<span>But tho’ their men had silver,</span>
+					<span>But though their men had silver,</span>
 					<span>’twas little that they bought, or for themselves were taking.</span>
 				</span>
 			</p>
@@ -2024,7 +2024,7 @@
 				<br/>
 				<span>
 					<span>With finger-rings and arm-bands,</span>
-					<span>as well as ribands dainty,</span>
+					<span>as well as ribbons dainty,</span>
 				</span>
 				<br/>
 				<span>
@@ -2748,7 +2748,7 @@
 			</p>
 			<p>
 				<span>
-					<span>Tho’ Hagen’s birth was kingly,</span>
+					<span>Though Hagen’s birth was kingly,</span>
 					<span>and lordly was his mood,</span>
 				</span>
 				<br/>
