--- a/src/epub/text/tale-8.xhtml
+++ b/src/epub/text/tale-8.xhtml
@@ -1190,7 +1190,7 @@
 				<br/>
 				<span>
 					<span>But they, when nursed by Wâ-te,</span>
-					<span>were turned to life, tho’ they by death were stricken.</span>
+					<span>were turned to life, though they by death were stricken.</span>
 				</span>
 			</p>
 			<p>
