[Editorial] correct scansion marks

--- a/src/epub/text/tale-1.xhtml
+++ b/src/epub/text/tale-1.xhtml
@@ -1168,7 +1168,7 @@
 				</span>
 				<br/>
 				<span>
-					<span>His son, so well-belovéd,</span>
+					<span>His son, so well-belovèd,</span>
 					<span>to him was lost, with the mighty bird far hasting.</span>
 				</span>
 			</p>
