--- a/src/epub/text/tale-14.xhtml
+++ b/src/epub/text/tale-14.xhtml
@@ -398,7 +398,7 @@
 			<p>
 				<span>
 					<span>Ludwig said to Hartmut,</span>
-					<span>his well belovéd son:</span>
+					<span>his well belovèd son:</span>
 				</span>
 				<br/>
 				<span>
