--- a/src/epub/text/tale-22.xhtml
+++ b/src/epub/text/tale-22.xhtml
@@ -219,7 +219,7 @@
 				<br/>
 				<span>
 					<span>To hold so long in bondage</span>
-					<span>my own betrothéd maiden:</span>
+					<span>my own betrothèd maiden:</span>
 				</span>
 				<br/>
 				<span>
@@ -906,7 +906,7 @@
 				</span>
 				<br/>
 				<span>
-					<span>Young Ortwin, dear-belovéd,</span>
+					<span>Young Ortwin, dear-belovèd,</span>
 					<span>to manhood nearly grown.</span>
 				</span>
 				<br/>
