--- a/src/epub/text/tale-25.xhtml
+++ b/src/epub/text/tale-25.xhtml
@@ -869,7 +869,7 @@
 				</span>
 				<br/>
 				<span>
-					<span>With this were we betrothéd:</span>
+					<span>With this were we betrothèd:</span>
 					<span>to Gu-drun I am faithful ever,</span>
 				</span>
 				<br/>
@@ -1116,7 +1116,7 @@
 				</span>
 				<br/>
 				<span>
-					<span>Ne’er shall my well-belovéd</span>
+					<span>Ne’er shall my well-belovèd</span>
 					<span>be left by me behind;</span>
 				</span>
 				<br/>
@@ -2019,7 +2019,7 @@
 				</span>
 				<br/>
 				<span>
-					<span>“Gu-drun, belovéd lady,</span>
+					<span>“Gu-drun, belovèd lady,</span>
 					<span>if clothes the maids have none</span>
 				</span>
 				<br/>
@@ -2644,7 +2644,7 @@
 			</p>
 			<p>
 				<span>
-					<span>“Herwic, my betrothéd,</span>
+					<span>“Herwic, my betrothèd,</span>
 					<span>did I this morning kiss,</span>
 				</span>
 				<br/>
