--- a/src/epub/text/tale-27.xhtml
+++ b/src/epub/text/tale-27.xhtml
@@ -377,7 +377,7 @@
 			<p>
 				<span>
 					<span>“Of this bethink you further,</span>
-					<span>my well-belovéd son:</span>
+					<span>my well-belovèd son:</span>
 				</span>
 				<br/>
 				<span>
@@ -638,7 +638,7 @@
 				</span>
 				<br/>
 				<span>
-					<span>Herwic’s well-belovéd,</span>
+					<span>Herwic’s well-belovèd,</span>
 					<span>and saw the warriors daring,</span>
 				</span>
 				<br/>
@@ -764,7 +764,7 @@
 				</span>
 				<br/>
 				<span>
-					<span>When, for his heart’s belovéd,</span>
+					<span>When, for his heart’s belovèd,</span>
 					<span>he to the fight was springing.</span>
 				</span>
 				<br/>
