--- a/src/epub/text/tale-28.xhtml
+++ b/src/epub/text/tale-28.xhtml
@@ -103,7 +103,7 @@
 			</p>
 			<p>
 				<span>
-					<span>Soon Gu-drun’s betrothéd</span>
+					<span>Soon Gu-drun’s betrothèd</span>
 					<span>reached over Ludwig’s shield,</span>
 				</span>
 				<br/>
