--- a/src/epub/text/tale-31.xhtml
+++ b/src/epub/text/tale-31.xhtml
@@ -97,7 +97,7 @@
 				</span>
 				<br/>
 				<span>
-					<span>Beside the four betrothéd,</span>
+					<span>Beside the four betrothèd,</span>
 					<span>a hundred well-clothed maids they were thither leading.</span>
 				</span>
 			</p>
