--- a/src/epub/text/tale-4.xhtml
+++ b/src/epub/text/tale-4.xhtml
@@ -680,7 +680,7 @@
 				</span>
 				<br/>
 				<span>
-					<span>And said, in his child-belovéd</span>
+					<span>And said, in his child-belovèd</span>
 					<span>happy was their master.</span>
 				</span>
 				<br/>
