--- a/src/epub/text/tale-7.xhtml
+++ b/src/epub/text/tale-7.xhtml
@@ -160,7 +160,7 @@
 				</span>
 				<br/>
 				<span>
-					<span>For her daughter dear-belovéd</span>
+					<span>For her daughter dear-belovèd</span>
 					<span>sorrow and anger the queen aloud did utter.</span>
 				</span>
 			</p>
@@ -591,7 +591,7 @@
 				</span>
 				<br/>
 				<span>
-					<span>To meet his well-belovéd.</span>
+					<span>To meet his well-belovèd.</span>
 					<span>Now hoped the maids the more</span>
 				</span>
 				<br/>
