--- a/src/epub/text/tale-24.xhtml
+++ b/src/epub/text/tale-24.xhtml
@@ -202,7 +202,7 @@
 				</span>
 				<br/>
 				<span>
-					<span>And Herwic, my betrothéd?</span>
+					<span>And Herwic, my betrothèd?</span>
 					<span>’Twould gladden me could’st thou this news be telling.”</span>
 				</span>
 			</p>
